@@ -2325,8 +2325,6 @@ str mnstr_socket_rastreamwrap(Stream *S, int *socket, str *name);
 str mnstr_socket_rstreamwrap(Stream *S, int *socket, str *name);
 str mnstr_socket_wastreamwrap(Stream *S, int *socket, str *name);
 str mnstr_socket_wstreamwrap(Stream *S, int *socket, str *name);
-str mnstr_stream_rstreamwrap(Stream *sout, Stream *sin);
-str mnstr_stream_wstreamwrap(Stream *sout, Stream *sin);
 int mnstr_writeInt_wrap(Stream *S, int *data);
 str mnstr_writeIntwrap(void *ret, Stream *S, int *data);
 int mnstr_write_string(Stream *S, str data);
@@ -2665,7 +2663,6 @@ int mnstr_readShtArray(stream *s, short *val, size_t cnt);
 int mnstr_readStr(stream *s, char *val);
 ssize_t mnstr_read_block(stream *s, void *buf, size_t elmsize, size_t cnt);
 ssize_t mnstr_readline(stream *s, void *buf, size_t maxcnt);
-stream *mnstr_rstream(stream *s);
 void mnstr_set_byteorder(stream *s, char bigendian);
 void mnstr_settimeout(stream *s, unsigned int ms, int( *func)(void));
 int mnstr_type(stream *s);
@@ -2684,7 +2681,6 @@ int mnstr_writeLngArray(stream *s, const lng *val, size_t cnt);
 int mnstr_writeSht(stream *s, short val);
 int mnstr_writeShtArray(stream *s, const short *val, size_t cnt);
 int mnstr_writeStr(stream *s, const char *val);
-stream *mnstr_wstream(stream *s);
 stream *open_rastream(const char *filename);
 stream *open_rstream(const char *filename);
 stream *open_urlstream(const char *url);
